Fix missing background color on frozen cells

--- a/packages/react-data-grid/style/rdg-cell.less
+++ b/packages/react-data-grid/style/rdg-cell.less
@@ -4,6 +4,7 @@
   padding-right: 8px;
   border-right: 1px solid #eee;
   border-bottom: 1px solid @borderColor;
+  background-color: inherit;
 }
 
 .rdg-selected {
